--- a/order_data_analysis_report.html
+++ b/order_data_analysis_report.html
@@ -1,224 +1,38 @@
-<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Analysis</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 41 orders</li>
-<li>Net Banking: 35 orders</li>
-<li>Debit Card: 31 orders</li>
-<li>Cash on Delivery: 52 orders</li>
-<li>UPI: 41 orders</li>
-</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $102,77</li><li>Average Shipping Cost: $26,15</li></ul>
-<h3>Ratings and Reviews</h3><ul><li>1-star: 39 reviews</li>
-<li>2-star: 42 reviews</li>
-<li>3-star: 44 reviews</li>
-<li>4-star: 35 reviews</li>
-<li>5-star: 40 reviews</li>
-</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 40 reviews)</li><li>Worst Rating: 1 (from 39 reviews)</li></ul>
-<h3>Highest Order</h3><ul><li>Order ID: ORD_44071</li><li>Total Amount: $9337,85</li><li>Payment Method: UPI</li></ul>
-<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_1454, Maximum Discount: $38,30</li>
-<li>Product ID: PROD_1574, Maximum Discount: $74,27</li>
-<li>Product ID: PROD_7679, Maximum Discount: $163,39</li>
-<li>Product ID: PROD_9979, Maximum Discount: $15,22</li>
-<li>Product ID: PROD_4721, Maximum Discount: $139,53</li>
-<li>Product ID: PROD_2546, Maximum Discount: $184,39</li>
-<li>Product ID: PROD_2666, Maximum Discount: $155,40</li>
-<li>Product ID: PROD_5133, Maximum Discount: $69,39</li>
-<li>Product ID: PROD_7434, Maximum Discount: $142,32</li>
-<li>Product ID: PROD_5015, Maximum Discount: $68,59</li>
-<li>Product ID: PROD_6463, Maximum Discount: $54,28</li>
-<li>Product ID: PROD_3081, Maximum Discount: $151,13</li>
-<li>Product ID: PROD_689, Maximum Discount: $167,00</li>
-<li>Product ID: PROD_4848, Maximum Discount: $148,54</li>
-<li>Product ID: PROD_1564, Maximum Discount: $37,28</li>
-<li>Product ID: PROD_3747, Maximum Discount: $67,00</li>
-<li>Product ID: PROD_1327, Maximum Discount: $90,99</li>
-<li>Product ID: PROD_338, Maximum Discount: $169,90</li>
-<li>Product ID: PROD_6459, Maximum Discount: $192,69</li>
-<li>Product ID: PROD_6339, Maximum Discount: $24,89</li>
-<li>Product ID: PROD_7663, Maximum Discount: $20,75</li>
-<li>Product ID: PROD_7787, Maximum Discount: $96,58</li>
-<li>Product ID: PROD_5361, Maximum Discount: $91,55</li>
-<li>Product ID: PROD_9287, Maximum Discount: $109,53</li>
-<li>Product ID: PROD_7540, Maximum Discount: $23,65</li>
-<li>Product ID: PROD_7782, Maximum Discount: $34,99</li>
-<li>Product ID: PROD_9055, Maximum Discount: $198,05</li>
-<li>Product ID: PROD_8084, Maximum Discount: $154,67</li>
-<li>Product ID: PROD_8087, Maximum Discount: $156,90</li>
-<li>Product ID: PROD_576, Maximum Discount: $131,32</li>
-<li>Product ID: PROD_453, Maximum Discount: $141,88</li>
-<li>Product ID: PROD_5808, Maximum Discount: $51,04</li>
-<li>Product ID: PROD_309, Maximum Discount: $129,85</li>
-<li>Product ID: PROD_6326, Maximum Discount: $111,94</li>
-<li>Product ID: PROD_1677, Maximum Discount: $11,20</li>
-<li>Product ID: PROD_8626, Maximum Discount: $23,74</li>
-<li>Product ID: PROD_7410, Maximum Discount: $140,30</li>
-<li>Product ID: PROD_5476, Maximum Discount: $89,20</li>
-<li>Product ID: PROD_8188, Maximum Discount: $190,59</li>
-<li>Product ID: PROD_6560, Maximum Discount: $164,04</li>
-<li>Product ID: PROD_3181, Maximum Discount: $0,76</li>
-<li>Product ID: PROD_9281, Maximum Discount: $50,29</li>
-<li>Product ID: PROD_8193, Maximum Discount: $96,13</li>
-<li>Product ID: PROD_786, Maximum Discount: $65,66</li>
-<li>Product ID: PROD_2751, Maximum Discount: $87,60</li>
-<li>Product ID: PROD_3845, Maximum Discount: $48,87</li>
-<li>Product ID: PROD_7645, Maximum Discount: $131,01</li>
-<li>Product ID: PROD_9945, Maximum Discount: $12,25</li>
-<li>Product ID: PROD_2072, Maximum Discount: $51,42</li>
-<li>Product ID: PROD_8854, Maximum Discount: $112,03</li>
-<li>Product ID: PROD_8970, Maximum Discount: $73,16</li>
-<li>Product ID: PROD_3043, Maximum Discount: $128,21</li>
-<li>Product ID: PROD_3285, Maximum Discount: $128,09</li>
-<li>Product ID: PROD_8184, Maximum Discount: $170,26</li>
-<li>Product ID: PROD_675, Maximum Discount: $141,92</li>
-<li>Product ID: PROD_2500, Maximum Discount: $183,43</li>
-<li>Product ID: PROD_4128, Maximum Discount: $122,48</li>
-<li>Product ID: PROD_9939, Maximum Discount: $95,18</li>
-<li>Product ID: PROD_9937, Maximum Discount: $3,00</li>
-<li>Product ID: PROD_4367, Maximum Discount: $31,89</li>
-<li>Product ID: PROD_8723, Maximum Discount: $56,19</li>
-<li>Product ID: PROD_6426, Maximum Discount: $137,12</li>
-<li>Product ID: PROD_7757, Maximum Discount: $40,12</li>
-<li>Product ID: PROD_7630, Maximum Discount: $134,86</li>
-<li>Product ID: PROD_3151, Maximum Discount: $172,67</li>
-<li>Product ID: PROD_7875, Maximum Discount: $157,71</li>
-<li>Product ID: PROD_8964, Maximum Discount: $64,70</li>
-<li>Product ID: PROD_9021, Maximum Discount: $199,76</li>
-<li>Product ID: PROD_9384, Maximum Discount: $88,91</li>
-<li>Product ID: PROD_1538, Maximum Discount: $3,48</li>
-<li>Product ID: PROD_4239, Maximum Discount: $192,36</li>
-<li>Product ID: PROD_7628, Maximum Discount: $80,66</li>
-<li>Product ID: PROD_2970, Maximum Discount: $103,09</li>
-<li>Product ID: PROD_8833, Maximum Discount: $133,84</li>
-<li>Product ID: PROD_6657, Maximum Discount: $128,81</li>
-<li>Product ID: PROD_3701, Maximum Discount: $36,48</li>
-<li>Product ID: PROD_5568, Maximum Discount: $67,81</li>
-<li>Product ID: PROD_2294, Maximum Discount: $21,90</li>
-<li>Product ID: PROD_9008, Maximum Discount: $163,56</li>
-<li>Product ID: PROD_4596, Maximum Discount: $85,35</li>
-<li>Product ID: PROD_5322, Maximum Discount: $114,29</li>
-<li>Product ID: PROD_8711, Maximum Discount: $62,94</li>
-<li>Product ID: PROD_5202, Maximum Discount: $1,13</li>
-<li>Product ID: PROD_6892, Maximum Discount: $79,63</li>
-<li>Product ID: PROD_2175, Maximum Discount: $133,09</li>
-<li>Product ID: PROD_1406, Maximum Discount: $178,07</li>
-<li>Product ID: PROD_531, Maximum Discount: $191,03</li>
-<li>Product ID: PROD_4105, Maximum Discount: $113,75</li>
-<li>Product ID: PROD_1992, Maximum Discount: $158,97</li>
-<li>Product ID: PROD_6644, Maximum Discount: $141,26</li>
-<li>Product ID: PROD_7854, Maximum Discount: $155,75</li>
-<li>Product ID: PROD_8701, Maximum Discount: $18,53</li>
-<li>Product ID: PROD_506, Maximum Discount: $70,78</li>
-<li>Product ID: PROD_6647, Maximum Discount: $1,53</li>
-<li>Product ID: PROD_9910, Maximum Discount: $91,30</li>
-<li>Product ID: PROD_1194, Maximum Discount: $19,13</li>
-<li>Product ID: PROD_8700, Maximum Discount: $52,22</li>
-<li>Product ID: PROD_1076, Maximum Discount: $87,31</li>
-<li>Product ID: PROD_6086, Maximum Discount: $158,37</li>
-<li>Product ID: PROD_7178, Maximum Discount: $185,69</li>
-<li>Product ID: PROD_1195, Maximum Discount: $189,73</li>
-<li>Product ID: PROD_4100, Maximum Discount: $149,49</li>
-<li>Product ID: PROD_3819, Maximum Discount: $199,79</li>
-<li>Product ID: PROD_1745, Maximum Discount: $86,29</li>
-<li>Product ID: PROD_3008, Maximum Discount: $164,27</li>
-<li>Product ID: PROD_4451, Maximum Discount: $16,92</li>
-<li>Product ID: PROD_4330, Maximum Discount: $70,57</li>
-<li>Product ID: PROD_5541, Maximum Discount: $134,27</li>
-<li>Product ID: PROD_6751, Maximum Discount: $51,93</li>
-<li>Product ID: PROD_1060, Maximum Discount: $103,14</li>
-<li>Product ID: PROD_1184, Maximum Discount: $63,42</li>
-<li>Product ID: PROD_9585, Maximum Discount: $194,21</li>
-<li>Product ID: PROD_6749, Maximum Discount: $117,53</li>
-<li>Product ID: PROD_8806, Maximum Discount: $141,77</li>
-<li>Product ID: PROD_5419, Maximum Discount: $161,63</li>
-<li>Product ID: PROD_3476, Maximum Discount: $139,80</li>
-<li>Product ID: PROD_1057, Maximum Discount: $43,67</li>
-<li>Product ID: PROD_1975, Maximum Discount: $51,84</li>
-<li>Product ID: PROD_1734, Maximum Discount: $101,51</li>
-<li>Product ID: PROD_8129, Maximum Discount: $86,23</li>
-<li>Product ID: PROD_5778, Maximum Discount: $50,37</li>
-<li>Product ID: PROD_603, Maximum Discount: $63,95</li>
-<li>Product ID: PROD_6861, Maximum Discount: $21,63</li>
-<li>Product ID: PROD_8488, Maximum Discount: $42,10</li>
-<li>Product ID: PROD_8249, Maximum Discount: $15,40</li>
-<li>Product ID: PROD_7283, Maximum Discount: $138,20</li>
-<li>Product ID: PROD_6190, Maximum Discount: $37,79</li>
-<li>Product ID: PROD_2826, Maximum Discount: $191,28</li>
-<li>Product ID: PROD_7826, Maximum Discount: $79,72</li>
-<li>Product ID: PROD_2379, Maximum Discount: $23,89</li>
-<li>Product ID: PROD_4439, Maximum Discount: $83,88</li>
-<li>Product ID: PROD_1045, Maximum Discount: $82,12</li>
-<li>Product ID: PROD_7700, Maximum Discount: $152,68</li>
-<li>Product ID: PROD_4671, Maximum Discount: $189,85</li>
-<li>Product ID: PROD_5640, Maximum Discount: $80,76</li>
-<li>Product ID: PROD_6970, Maximum Discount: $99,47</li>
-<li>Product ID: PROD_4794, Maximum Discount: $149,86</li>
-<li>Product ID: PROD_4553, Maximum Discount: $131,28</li>
-<li>Product ID: PROD_291, Maximum Discount: $65,72</li>
-<li>Product ID: PROD_972, Maximum Discount: $162,49</li>
-<li>Product ID: PROD_3902, Maximum Discount: $143,56</li>
-<li>Product ID: PROD_3906, Maximum Discount: $46,01</li>
-<li>Product ID: PROD_6604, Maximum Discount: $123,37</li>
-<li>Product ID: PROD_1397, Maximum Discount: $169,17</li>
-<li>Product ID: PROD_2124, Maximum Discount: $100,17</li>
-<li>Product ID: PROD_5754, Maximum Discount: $57,11</li>
-<li>Product ID: PROD_1274, Maximum Discount: $167,40</li>
-<li>Product ID: PROD_2364, Maximum Discount: $88,71</li>
-<li>Product ID: PROD_9312, Maximum Discount: $170,25</li>
-<li>Product ID: PROD_1272, Maximum Discount: $127,43</li>
-<li>Product ID: PROD_942, Maximum Discount: $148,97</li>
-<li>Product ID: PROD_1835, Maximum Discount: $124,46</li>
-<li>Product ID: PROD_386, Maximum Discount: $148,96</li>
-<li>Product ID: PROD_6714, Maximum Discount: $67,61</li>
-<li>Product ID: PROD_5621, Maximum Discount: $127,01</li>
-<li>Product ID: PROD_9307, Maximum Discount: $15,20</li>
-<li>Product ID: PROD_4773, Maximum Discount: $115,83</li>
-<li>Product ID: PROD_7247, Maximum Discount: $0,77</li>
-<li>Product ID: PROD_7363, Maximum Discount: $30,85</li>
-<li>Product ID: PROD_7807, Maximum Discount: $90,73</li>
-<li>Product ID: PROD_6703, Maximum Discount: $189,08</li>
-<li>Product ID: PROD_2587, Maximum Discount: $159,05</li>
-<li>Product ID: PROD_6822, Maximum Discount: $81,95</li>
-<li>Product ID: PROD_4887, Maximum Discount: $179,46</li>
-<li>Product ID: PROD_9777, Maximum Discount: $99,46</li>
-<li>Product ID: PROD_8326, Maximum Discount: $95,58</li>
-<li>Product ID: PROD_8446, Maximum Discount: $40,21</li>
-<li>Product ID: PROD_9652, Maximum Discount: $169,77</li>
-<li>Product ID: PROD_3430, Maximum Discount: $143,69</li>
-<li>Product ID: PROD_7230, Maximum Discount: $45,51</li>
-<li>Product ID: PROD_8564, Maximum Discount: $155,18</li>
-<li>Product ID: PROD_8570, Maximum Discount: $181,44</li>
-<li>Product ID: PROD_5183, Maximum Discount: $39,01</li>
-<li>Product ID: PROD_486, Maximum Discount: $130,45</li>
-<li>Product ID: PROD_5847, Maximum Discount: $132,88</li>
-<li>Product ID: PROD_7106, Maximum Discount: $191,91</li>
-<li>Product ID: PROD_7226, Maximum Discount: $24,31</li>
-<li>Product ID: PROD_6015, Maximum Discount: $98,53</li>
-<li>Product ID: PROD_9521, Maximum Discount: $122,45</li>
-<li>Product ID: PROD_8311, Maximum Discount: $119,98</li>
-<li>Product ID: PROD_6939, Maximum Discount: $168,82</li>
-<li>Product ID: PROD_6802, Maximum Discount: $124,03</li>
-<li>Product ID: PROD_5715, Maximum Discount: $144,45</li>
-<li>Product ID: PROD_4868, Maximum Discount: $31,02</li>
-<li>Product ID: PROD_1239, Maximum Discount: $40,68</li>
-<li>Product ID: PROD_4501, Maximum Discount: $28,47</li>
-<li>Product ID: PROD_4502, Maximum Discount: $86,86</li>
-<li>Product ID: PROD_8307, Maximum Discount: $111,34</li>
-<li>Product ID: PROD_4860, Maximum Discount: $133,26</li>
-<li>Product ID: PROD_7456, Maximum Discount: $7,55</li>
-<li>Product ID: PROD_2683, Maximum Discount: $158,12</li>
-<li>Product ID: PROD_8781, Maximum Discount: $53,87</li>
-<li>Product ID: PROD_5396, Maximum Discount: $66,49</li>
-<li>Product ID: PROD_8790, Maximum Discount: $102,14</li>
-<li>Product ID: PROD_4072, Maximum Discount: $172,47</li>
-<li>Product ID: PROD_220, Maximum Discount: $180,48</li>
-<li>Product ID: PROD_8416, Maximum Discount: $34,33</li>
-<li>Product ID: PROD_594, Maximum Discount: $54,01</li>
-</ul><h3>Monthly Sales</h3><ul><li>JUNE: $31534,65</li>
-<li>JANUARY: $65179,33</li>
-<li>MAY: $60115,07</li>
-<li>OCTOBER: $49960,19</li>
-<li>DECEMBER: $29364,35</li>
-<li>MARCH: $46387,33</li>
-<li>FEBRUARY: $63400,25</li>
-<li>AUGUST: $49843,09</li>
-<li>SEPTEMBER: $43666,02</li>
-<li>JULY: $71467,52</li>
-<li>NOVEMBER: $60108,60</li>
-<li>APRIL: $49410,88</li>
+<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Analysis</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 40 orders</li>
+<li>Net Banking: 33 orders</li>
+<li>Debit Card: 41 orders</li>
+<li>Cash on Delivery: 47 orders</li>
+<li>UPI: 39 orders</li>
+</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $99,49</li><li>Average Shipping Cost: $27,07</li></ul>
+<h3>Ratings and Reviews</h3><ul><li>1-star: 43 reviews</li>
+<li>2-star: 29 reviews</li>
+<li>3-star: 42 reviews</li>
+<li>4-star: 44 reviews</li>
+<li>5-star: 42 reviews</li>
+</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 42 reviews)</li><li>Worst Rating: 1 (from 43 reviews)</li></ul>
+<h3>Highest Order</h3><ul><li>Order ID: ORD_41108</li><li>Total Amount: $9870,04</li><li>Payment Method: Debit Card</li></ul>
+<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_3633, Maximum Discount: $116,51</li>
+<li>Product ID: PROD_4725, Maximum Discount: $72,57</li>
+<li>Product ID: PROD_3872, Maximum Discount: $21,23</li>
+</ul><h3>Minimum Discount by Product</h3><ul><li>Product ID: PROD_3633, Minimum Discount: $116,51</li>
+<li>Product ID: PROD_4725, Minimum Discount: $72,57</li>
+<li>Product ID: PROD_3872, Minimum Discount: $21,23</li>
+</ul><h3>Average Rating by Product</h3><ul><li>Product ID: PROD_3633, Average Rating: 2,00</li>
+<li>Product ID: PROD_4725, Average Rating: 5,00</li>
+<li>Product ID: PROD_3872, Average Rating: 5,00</li>
+</ul><h3>Most Frequently Bought Product</h3><p>Product ID: PROD_3633</p><h3>Mode of Quantity for Products</h3><ul><li>Product ID: PROD_3633, Mode Quantity: 5</li>
+<li>Product ID: PROD_4725, Mode Quantity: 1</li>
+<li>Product ID: PROD_3872, Mode Quantity: 2</li>
+</ul><h3>Monthly Sales</h3><ul><li>JUNE: $30765,86</li>
+<li>JANUARY: $44419,56</li>
+<li>MAY: $79832,09</li>
+<li>OCTOBER: $48605,69</li>
+<li>DECEMBER: $69336,57</li>
+<li>MARCH: $55041,31</li>
+<li>FEBRUARY: $51041,81</li>
+<li>AUGUST: $44334,09</li>
+<li>JULY: $23499,71</li>
+<li>SEPTEMBER: $64612,18</li>
+<li>NOVEMBER: $32602,97</li>
+<li>APRIL: $83777,66</li>
 </ul></body></html>
