--- a/product_data_analysis_report.html
+++ b/product_data_analysis_report.html
@@ -1,24 +1,1 @@
-<html><head><title>Product Data Analysis Report</title></head><body><h2>Product Analysis</h2><h3>Product Categories</h3><ul><li>Beauty</li>
-<li>Home Appliances</li>
-<li>Books</li>
-<li>Fashion</li>
-<li>Groceries</li>
-<li>Electronics</li>
-</ul><h3>Product Brands</h3><ul><li>BrandB</li>
-<li>BrandA</li>
-<li>BrandD</li>
-<li>BrandC</li>
-</ul><h3>Product Count by Category</h3><ul><li>Beauty: 31 products</li>
-<li>Groceries: 43 products</li>
-<li>Fashion: 37 products</li>
-<li>Electronics: 30 products</li>
-<li>Books: 26 products</li>
-<li>Home Appliances: 33 products</li>
-</ul><h3>Cheapest and Most Expensive Products</h3><ul><li>Cheapest Product: Product_4403 ($37,25)</li><li>Most Expensive Product: Product_4501 ($1996,16)</li></ul>
-<h3>Cheapest and Most Expensive Products by Category</h3><ul><li>Beauty: Cheapest - Product_6741, Most Expensive - Product_4501</li>
-<li>Groceries: Cheapest - Product_4845, Most Expensive - Product_565</li>
-<li>Fashion: Cheapest - Product_4403, Most Expensive - Product_8298</li>
-<li>Electronics: Cheapest - Product_5111, Most Expensive - Product_6271</li>
-<li>Books: Cheapest - Product_6745, Most Expensive - Product_6858</li>
-<li>Home Appliances: Cheapest - Product_4506, Most Expensive - Product_5165</li>
-</ul></body></html>
+<html><head><title>Product Data Analysis Report</title></head><body><h1>Product Data Analysis Report</h1><h2>Data Overview</h2><ul><li>Total Records Read: 200 products.</li><li>Unique Products Identified: 200.</li></ul><h2>Categories and Brands</h2><p><strong>Categories Identified:</strong> Beauty, Books, Home Appliances, Fashion, Groceries, Electronics.</p><p><strong>Brands Represented:</strong> BrandD, BrandA, BrandC, BrandB.</p><h3>Product Distribution by Category:</h3><ul><li>Beauty: 30 products.</li><li>Groceries: 25 products.</li><li>Fashion: 47 products.</li><li>Electronics: 36 products.</li><li>Books: 28 products.</li><li>Home Appliances: 34 products.</li></ul><h2>Product Pricing Analysis</h2><h3>Price Comparison</h3><p><strong>Cheapest Product:</strong> Product_7409.</p><p><strong>Most Expensive Product:</strong> Product_7029.</p><h3>Price Extremes by Category:</h3><ul><li><strong>Beauty:</strong> Cheapest: Product_7607, Most Expensive: Product_3405.</li><li><strong>Groceries:</strong> Cheapest: Product_7592, Most Expensive: Product_865.</li><li><strong>Fashion:</strong> Cheapest: Product_7587, Most Expensive: Product_4788.</li><li><strong>Electronics:</strong> Cheapest: Product_3747, Most Expensive: Product_2128.</li><li><strong>Books:</strong> Cheapest: Product_8180, Most Expensive: Product_7029.</li><li><strong>Home Appliances:</strong> Cheapest: Product_7409, Most Expensive: Product_2743.</li></ul><h2>Insights and Recommendations</h2><ul><li><strong>Targeted Promotions:</strong> Focus on high-demand categories with discounts for younger demographics.</li><li><strong>Luxury Market Focus:</strong> Develop strategies to target premium customers in categories like Beauty.</li><li><strong>Dynamic Pricing:</strong> Use pricing strategies tailored to demand trends.</li></ul></body></html>
