adding conclusion to reports

--- a/customer_data_analysis_report.html
+++ b/customer_data_analysis_report.html
@@ -1,13 +1,13 @@
-<html><head><title>Customer Data Analysis Report</title></head><body><h2>Customer Analysis</h2><h3>Customer Gender Distribution</h3><ul><li>Male: 67 customers</li>
-<li>Female: 65 customers</li>
+<html><head><title>Customer Data Analysis Report</title></head><body><h2>Customer Analysis</h2><h3>Customer Gender Distribution</h3><ul><li>Male: 62 customers</li>
+<li>Female: 70 customers</li>
 <li>Other: 68 customers</li>
-</ul><p>Insights: The data shows a higher engagement from Female and Other gender customers compared to Male customers. This suggests an opportunity to focus marketing and product offerings on these demographics while exploring reasons for lower Male engagement.</p><h3>Customer Age Group Distribution</h3><ul><li>26-35: 44 customers</li>
-<li>18-25: 47 customers</li>
-<li>36-45: 56 customers</li>
-<li>46-55: 53 customers</li>
-</ul><p>Insights: The 26-35 and 36-45 age groups form the core customer base. However, there is a balanced engagement across all age groups, suggesting a diverse customer base. Focus on creating tailored offerings for the 26-45 age group while maintaining inclusivity for others.</p><h3>Top 5 Cities by Customer Count</h3><ul><li>Jaipur: 31 customers</li>
-<li>Mumbai: 31 customers</li>
-<li>Chennai: 26 customers</li>
+</ul><h3>Insights:</h3> The data shows a higher engagement from Female and Other gender customers compared to Male customers. This suggests an opportunity to focus marketing and product offerings on these demographics while exploring reasons for lower Male engagement.</p><h3>Customer Age Group Distribution</h3><ul><li>26-35: 45 customers</li>
+<li>18-25: 57 customers</li>
+<li>36-45: 48 customers</li>
+<li>46-55: 50 customers</li>
+</ul><p>Insights: The 26-35 and 36-45 age groups form the core customer base. However, there is a balanced engagement across all age groups, suggesting a diverse customer base. Focus on creating tailored offerings for the 26-45 age group while maintaining inclusivity for others.</p><h3>Top 5 Cities by Customer Count</h3><ul><li>Bangalore: 31 customers</li>
+<li>Chennai: 28 customers</li>
 <li>Kolkata: 26 customers</li>
-<li>Pune: 24 customers</li>
-</ul><p>Insights: Bangalore leads the customer count, followed closely by Pune. These cities could be prioritized for marketing campaigns, customer loyalty programs, and expanded services. Kolkata, Delhi, and Chennai also show significant engagement, indicating strong potential in metropolitan areas.</p></body></html>
+<li>Hyderabad: 26 customers</li>
+<li>Pune: 25 customers</li>
+</ul><h3>Insights:</h3> Bangalore leads the customer count, followed closely by Pune. These cities could be prioritized for marketing campaigns, customer loyalty programs, and expanded services. Kolkata, Delhi, and Chennai also show significant engagement, indicating strong potential in metropolitan areas.</p><h3> Conclusion</h3><p>The analysis highlights key trends in gender, age, and geographic distribution among customers. Opportunities include targeting high-potential cities, designing age-specific campaigns, and fostering inclusivity in marketing strategies. Future studies could delve deeper into customer preferences, behavior patterns, and product-specific demand to refine strategies and maximize engagement.</p></body></html>
