--- a/order_data_analysis_report.html
+++ b/order_data_analysis_report.html
@@ -1,38 +1,38 @@
-<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Analysis</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 40 orders</li>
-<li>Net Banking: 33 orders</li>
-<li>Debit Card: 41 orders</li>
-<li>Cash on Delivery: 47 orders</li>
-<li>UPI: 39 orders</li>
-</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $99,49</li><li>Average Shipping Cost: $27,07</li></ul>
-<h3>Ratings and Reviews</h3><ul><li>1-star: 43 reviews</li>
-<li>2-star: 29 reviews</li>
-<li>3-star: 42 reviews</li>
-<li>4-star: 44 reviews</li>
-<li>5-star: 42 reviews</li>
-</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 42 reviews)</li><li>Worst Rating: 1 (from 43 reviews)</li></ul>
-<h3>Highest Order</h3><ul><li>Order ID: ORD_41108</li><li>Total Amount: $9870,04</li><li>Payment Method: Debit Card</li></ul>
-<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_3633, Maximum Discount: $116,51</li>
-<li>Product ID: PROD_4725, Maximum Discount: $72,57</li>
-<li>Product ID: PROD_3872, Maximum Discount: $21,23</li>
-</ul><h3>Minimum Discount by Product</h3><ul><li>Product ID: PROD_3633, Minimum Discount: $116,51</li>
-<li>Product ID: PROD_4725, Minimum Discount: $72,57</li>
-<li>Product ID: PROD_3872, Minimum Discount: $21,23</li>
-</ul><h3>Average Rating by Product</h3><ul><li>Product ID: PROD_3633, Average Rating: 2,00</li>
-<li>Product ID: PROD_4725, Average Rating: 5,00</li>
-<li>Product ID: PROD_3872, Average Rating: 5,00</li>
-</ul><h3>Most Frequently Bought Product</h3><p>Product ID: PROD_3633</p><h3>Mode of Quantity for Products</h3><ul><li>Product ID: PROD_3633, Mode Quantity: 5</li>
-<li>Product ID: PROD_4725, Mode Quantity: 1</li>
-<li>Product ID: PROD_3872, Mode Quantity: 2</li>
-</ul><h3>Monthly Sales</h3><ul><li>JUNE: $30765,86</li>
-<li>JANUARY: $44419,56</li>
-<li>MAY: $79832,09</li>
-<li>OCTOBER: $48605,69</li>
-<li>DECEMBER: $69336,57</li>
-<li>MARCH: $55041,31</li>
-<li>FEBRUARY: $51041,81</li>
-<li>AUGUST: $44334,09</li>
-<li>JULY: $23499,71</li>
-<li>SEPTEMBER: $64612,18</li>
-<li>NOVEMBER: $32602,97</li>
-<li>APRIL: $83777,66</li>
-</ul></body></html>
+<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Analysis</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 41 orders</li>
+<li>Net Banking: 42 orders</li>
+<li>Debit Card: 40 orders</li>
+<li>Cash on Delivery: 51 orders</li>
+<li>UPI: 26 orders</li>
+</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $101.37</li><li>Average Shipping Cost: $27.64</li></ul>
+<h3>Ratings and Reviews</h3><ul><li>1-star: 39 reviews</li>
+<li>2-star: 37 reviews</li>
+<li>3-star: 38 reviews</li>
+<li>4-star: 47 reviews</li>
+<li>5-star: 39 reviews</li>
+</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 39 reviews)</li><li>Worst Rating: 1 (from 39 reviews)</li></ul>
+<h3>Highest Order</h3><ul><li>Order ID: ORD_25771</li><li>Total Amount: $9855.38</li><li>Payment Method: UPI</li></ul>
+<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_3875, Maximum Discount: $19.33</li>
+<li>Product ID: PROD_3510, Maximum Discount: $28.23</li>
+<li>Product ID: PROD_1695, Maximum Discount: $33.61</li>
+</ul><h3>Minimum Discount by Product</h3><ul><li>Product ID: PROD_3875, Minimum Discount: $19.33</li>
+<li>Product ID: PROD_3510, Minimum Discount: $28.23</li>
+<li>Product ID: PROD_1695, Minimum Discount: $33.61</li>
+</ul><h3>Average Rating by Product</h3><ul><li>Product ID: PROD_3875, Average Rating: 5.00</li>
+<li>Product ID: PROD_3510, Average Rating: 3.00</li>
+<li>Product ID: PROD_1695, Average Rating: 1.00</li>
+</ul><h3>Most Frequently Bought Product</h3><p>Product ID: PROD_2586</p><h3>Mode of Quantity for Products</h3><ul><li>Product ID: PROD_3875, Mode Quantity: 4</li>
+<li>Product ID: PROD_3510, Mode Quantity: 3</li>
+<li>Product ID: PROD_1695, Mode Quantity: 2</li>
+</ul><h3>Monthly Sales</h3><ul><li>JUNE: $35647.40</li>
+<li>JANUARY: $45879.00</li>
+<li>MAY: $40002.22</li>
+<li>OCTOBER: $50098.65</li>
+<li>DECEMBER: $76275.14</li>
+<li>MARCH: $49890.54</li>
+<li>AUGUST: $44417.68</li>
+<li>FEBRUARY: $53101.73</li>
+<li>JULY: $63612.21</li>
+<li>SEPTEMBER: $58792.11</li>
+<li>NOVEMBER: $60935.38</li>
+<li>APRIL: $65442.48</li>
+</ul><h3> insights</h3><p>The dataset reveals consistent customer engagement across diverse payment methods. Reviews indicate a wide variation in customer satisfaction, emphasizing the need for quality improvements in low-rated products.</p><h3> Conclusion</h3><p>The analysis provides actionable insights into sales and customer behavior, emphasizing the importance of strategic promotions, tailored discount strategies, and enhanced customer satisfaction. Further efforts should explore customer feedback and cross-category behavior to fine-tune marketing approaches.</p></body></html>
