--- a/order_data_analysis_report.html
+++ b/order_data_analysis_report.html
@@ -1,38 +1,38 @@
-<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Analysis</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 40 orders</li>
-<li>Net Banking: 33 orders</li>
-<li>Debit Card: 41 orders</li>
-<li>Cash on Delivery: 47 orders</li>
-<li>UPI: 39 orders</li>
-</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $99,49</li><li>Average Shipping Cost: $27,07</li></ul>
-<h3>Ratings and Reviews</h3><ul><li>1-star: 43 reviews</li>
+<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Data Analysis Report</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 45 orders</li>
+<li>Net Banking: 40 orders</li>
+<li>Debit Card: 49 orders</li>
+<li>Cash on Delivery: 38 orders</li>
+<li>UPI: 28 orders</li>
+</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $101,42</li><li>Average Shipping Cost: $26,27</li></ul>
+<h3>Ratings and Reviews</h3><ul><li>1-star: 42 reviews</li>
 <li>2-star: 29 reviews</li>
-<li>3-star: 42 reviews</li>
-<li>4-star: 44 reviews</li>
-<li>5-star: 42 reviews</li>
-</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 42 reviews)</li><li>Worst Rating: 1 (from 43 reviews)</li></ul>
-<h3>Highest Order</h3><ul><li>Order ID: ORD_41108</li><li>Total Amount: $9870,04</li><li>Payment Method: Debit Card</li></ul>
-<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_3633, Maximum Discount: $116,51</li>
-<li>Product ID: PROD_4725, Maximum Discount: $72,57</li>
-<li>Product ID: PROD_3872, Maximum Discount: $21,23</li>
-</ul><h3>Minimum Discount by Product</h3><ul><li>Product ID: PROD_3633, Minimum Discount: $116,51</li>
-<li>Product ID: PROD_4725, Minimum Discount: $72,57</li>
-<li>Product ID: PROD_3872, Minimum Discount: $21,23</li>
-</ul><h3>Average Rating by Product</h3><ul><li>Product ID: PROD_3633, Average Rating: 2,00</li>
-<li>Product ID: PROD_4725, Average Rating: 5,00</li>
-<li>Product ID: PROD_3872, Average Rating: 5,00</li>
-</ul><h3>Most Frequently Bought Product</h3><p>Product ID: PROD_3633</p><h3>Mode of Quantity for Products</h3><ul><li>Product ID: PROD_3633, Mode Quantity: 5</li>
-<li>Product ID: PROD_4725, Mode Quantity: 1</li>
-<li>Product ID: PROD_3872, Mode Quantity: 2</li>
-</ul><h3>Monthly Sales</h3><ul><li>JUNE: $30765,86</li>
-<li>JANUARY: $44419,56</li>
-<li>MAY: $79832,09</li>
-<li>OCTOBER: $48605,69</li>
-<li>DECEMBER: $69336,57</li>
-<li>MARCH: $55041,31</li>
-<li>FEBRUARY: $51041,81</li>
-<li>AUGUST: $44334,09</li>
-<li>JULY: $23499,71</li>
-<li>SEPTEMBER: $64612,18</li>
-<li>NOVEMBER: $32602,97</li>
-<li>APRIL: $83777,66</li>
-</ul></body></html>
+<li>3-star: 35 reviews</li>
+<li>4-star: 40 reviews</li>
+<li>5-star: 54 reviews</li>
+</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 54 reviews)</li><li>Worst Rating: 1 (from 42 reviews)</li></ul>
+<h3>Highest Order</h3><ul><li>Order ID: ORD_19933</li><li>Total Amount: $9925,74</li><li>Payment Method: Cash on Delivery</li></ul>
+<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_3631, Maximum Discount: $119,17</li>
+<li>Product ID: PROD_9735, Maximum Discount: $152,28</li>
+<li>Product ID: PROD_448, Maximum Discount: $106,88</li>
+</ul><h3>Minimum Discount by Product</h3><ul><li>Product ID: PROD_3631, Minimum Discount: $119,17</li>
+<li>Product ID: PROD_9735, Minimum Discount: $152,28</li>
+<li>Product ID: PROD_448, Minimum Discount: $106,88</li>
+</ul><h3>Average Rating by Product</h3><ul><li>Product ID: PROD_3631, Average Rating: 4,00</li>
+<li>Product ID: PROD_9735, Average Rating: 3,00</li>
+<li>Product ID: PROD_448, Average Rating: 5,00</li>
+</ul><h3>Most Frequently Bought Product</h3><p>Product ID: PROD_3406</p><h3>Mode of Quantity for Products</h3><ul><li>Product ID: PROD_3631, Mode Quantity: 2</li>
+<li>Product ID: PROD_9735, Mode Quantity: 3</li>
+<li>Product ID: PROD_448, Mode Quantity: 2</li>
+</ul><h3>Monthly Sales</h3><ul><li>JANUARY: $60337,50</li>
+<li>JUNE: $61351,74</li>
+<li>MAY: $81275,06</li>
+<li>OCTOBER: $47779,76</li>
+<li>DECEMBER: $55935,12</li>
+<li>MARCH: $29819,47</li>
+<li>AUGUST: $38430,97</li>
+<li>FEBRUARY: $68652,39</li>
+<li>JULY: $71411,23</li>
+<li>SEPTEMBER: $39484,81</li>
+<li>NOVEMBER: $27143,74</li>
+<li>APRIL: $30111,41</li>
+</ul><h3>Order Statistics</h3><ul><li>Mean Review Rating: 3,18</li><li>Mean Total Amount: 3058,67</li><li>Standard Deviation of Total Amount: 2549,00</li><li>Mean Discount Amount: 101,42</li><li>Mean Shipping Cost: 26,27</li></ul></body></html>
