--- a/order_data_analysis_report.html
+++ b/order_data_analysis_report.html
@@ -1,38 +1,38 @@
-<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Data Analysis Report</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 37 orders</li>
-<li>Net Banking: 40 orders</li>
-<li>Debit Card: 42 orders</li>
-<li>Cash on Delivery: 44 orders</li>
-<li>UPI: 37 orders</li>
-</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $102,66</li><li>Average Shipping Cost: $25,80</li></ul>
-<h3>Ratings and Reviews</h3><ul><li>1-star: 46 reviews</li>
-<li>2-star: 39 reviews</li>
-<li>3-star: 42 reviews</li>
-<li>4-star: 35 reviews</li>
-<li>5-star: 38 reviews</li>
-</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 38 reviews)</li><li>Worst Rating: 1 (from 46 reviews)</li></ul>
-<h3>Highest Order</h3><ul><li>Order ID: ORD_47710</li><li>Total Amount: $9737,09</li><li>Payment Method: Net Banking</li></ul>
-<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_2664, Maximum Discount: $68,05</li>
-<li>Product ID: PROD_9979, Maximum Discount: $119,42</li>
-<li>Product ID: PROD_4842, Maximum Discount: $152,70</li>
-</ul><h3>Minimum Discount by Product</h3><ul><li>Product ID: PROD_2664, Minimum Discount: $68,05</li>
-<li>Product ID: PROD_9979, Minimum Discount: $119,42</li>
-<li>Product ID: PROD_4842, Minimum Discount: $152,70</li>
-</ul><h3>Average Rating by Product</h3><ul><li>Product ID: PROD_2664, Average Rating: 4,00</li>
-<li>Product ID: PROD_9979, Average Rating: 2,00</li>
-<li>Product ID: PROD_4842, Average Rating: 5,00</li>
-</ul><h3>Most Frequently Bought Product</h3><p>Product ID: PROD_2005</p><h3>Mode of Quantity for Products</h3><ul><li>Product ID: PROD_2664, Mode Quantity: 1</li>
-<li>Product ID: PROD_9979, Mode Quantity: 2</li>
-<li>Product ID: PROD_4842, Mode Quantity: 2</li>
-</ul><h3>Monthly Sales</h3><ul><li>JANUARY: $50949,66</li>
-<li>JUNE: $97120,36</li>
-<li>MAY: $35448,17</li>
-<li>OCTOBER: $43507,89</li>
-<li>DECEMBER: $41413,47</li>
-<li>MARCH: $47781,37</li>
-<li>AUGUST: $44878,91</li>
-<li>FEBRUARY: $40836,32</li>
-<li>SEPTEMBER: $29143,76</li>
-<li>JULY: $49560,25</li>
-<li>NOVEMBER: $89073,64</li>
-<li>APRIL: $85785,59</li>
-</ul><h3>Order Statistics</h3><ul><li>Mean Review Rating: 2,90</li><li>Mean Total Amount: 3277,50</li><li>Standard Deviation of Total Amount: 2565,72</li><li>Mean Discount Amount: 102,66</li><li>Mean Shipping Cost: 25,80</li></ul><h3> insights</h3><p>The dataset reveals consistent customer engagement across diverse payment methods. Reviews indicate a wide variation in customer satisfaction, emphasizing the need for quality improvements in low-rated products.</p><h3> Conclusion</h3><p>The analysis provides actionable insights into sales and customer behavior, emphasizing the importance of strategic promotions, tailored discount strategies, and enhanced customer satisfaction. Further efforts should explore customer feedback and cross-category behavior to fine-tune marketing approaches.</p></body></html>
+<html><head><title>Order Data Analysis Report</title></head><body><h2>Order Data Analysis Report</h2><h3>Revenue and Payment Methods</h3><ul><li>Credit Card: 41 orders</li>
+<li>Net Banking: 39 orders</li>
+<li>Debit Card: 46 orders</li>
+<li>Cash on Delivery: 40 orders</li>
+<li>UPI: 34 orders</li>
+</ul><h3>Average Discount and Shipping Cost</h3><ul><li>Average Discount: $97,37</li><li>Average Shipping Cost: $25,78</li></ul>
+<h3>Ratings and Reviews</h3><ul><li>1-star: 43 reviews</li>
+<li>2-star: 35 reviews</li>
+<li>3-star: 29 reviews</li>
+<li>4-star: 50 reviews</li>
+<li>5-star: 43 reviews</li>
+</ul><h3>Best and Worst Reviews</h3><ul><li>Best Rating: 5 (from 43 reviews)</li><li>Worst Rating: 1 (from 43 reviews)</li></ul>
+<h3>Highest Order</h3><ul><li>Order ID: ORD_6434</li><li>Total Amount: $9866,72</li><li>Payment Method: Debit Card</li></ul>
+<h3>Maximum Discount by Product</h3><ul><li>Product ID: PROD_4845, Maximum Discount: $160,63</li>
+<li>Product ID: PROD_3752, Maximum Discount: $26,24</li>
+<li>Product ID: PROD_3637, Maximum Discount: $59,74</li>
+</ul><h3>Minimum Discount by Product</h3><ul><li>Product ID: PROD_4845, Minimum Discount: $160,63</li>
+<li>Product ID: PROD_3752, Minimum Discount: $26,24</li>
+<li>Product ID: PROD_3637, Minimum Discount: $59,74</li>
+</ul><h3>Average Rating by Product</h3><ul><li>Product ID: PROD_4845, Average Rating: 1,00</li>
+<li>Product ID: PROD_3752, Average Rating: 4,00</li>
+<li>Product ID: PROD_3637, Average Rating: 3,00</li>
+</ul><h3>Most Frequently Bought Product</h3><p>Product ID: PROD_8422</p><h3>Mode of Quantity for Products</h3><ul><li>Product ID: PROD_4845, Mode Quantity: 4</li>
+<li>Product ID: PROD_3752, Mode Quantity: 4</li>
+<li>Product ID: PROD_3637, Mode Quantity: 1</li>
+</ul><h3>Monthly Sales</h3><ul><li>JANUARY: $32334,13</li>
+<li>JUNE: $65723,23</li>
+<li>MAY: $46569,39</li>
+<li>OCTOBER: $63539,67</li>
+<li>DECEMBER: $81722,21</li>
+<li>MARCH: $36704,20</li>
+<li>FEBRUARY: $54733,32</li>
+<li>AUGUST: $26566,88</li>
+<li>JULY: $22079,01</li>
+<li>SEPTEMBER: $68501,14</li>
+<li>NOVEMBER: $50792,85</li>
+<li>APRIL: $42476,12</li>
+</ul><h3>Order Statistics</h3><ul><li>Mean Review Rating: 3,08</li><li>Mean Total Amount: 2958,71</li><li>Standard Deviation of Total Amount: 2365,44</li><li>Mean Discount Amount: 97,37</li><li>Mean Shipping Cost: 25,78</li></ul><h3> insights</h3><p>The dataset reveals consistent customer engagement across diverse payment methods. Reviews indicate a wide variation in customer satisfaction, emphasizing the need for quality improvements in low-rated products.</p><h3> Conclusion</h3><p>The analysis provides actionable insights into sales and customer behavior, emphasizing the importance of strategic promotions, tailored discount strategies, and enhanced customer satisfaction. Further efforts should explore customer feedback and cross-category behavior to fine-tune marketing approaches.</p></body></html>
